fix chart formatting

--- a/index.html
+++ b/index.html
@@ -68,7 +68,21 @@
 							<p>What kinds of stories bring audiences to theaters and keep them coming back? Action and Adventure dominate the global box office, pulling in over $160 billion combined. But there’s a steep drop-off from there: Comedy trails in a distant third at $18.4B, with Drama and Fantasy not far behind. These numbers hint at more than just popularity, they reveal the kinds of emotional experiences and cinematic experiences people are willing to invest in, and the genres studios are most confident betting on.</p>
 						</div>
 						<div class="image" id="viz1-container">
-							<div class='tableauPlaceholder' id='viz1744219259443' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;TopEarningGenres&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Top10HighestGrossingMovieGenres&#47;TopEarningGenres' /><param name='tabs' value='no' /><param name='toolbar' value='no' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;To&#47;Top10HighestGrossingMovieGenres&#47;TopEarningGenres&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744219259443');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+							<div class='tableauPlaceholder' id='viz1' style="width:100%; height:100%;">
+								<noscript>
+									<a href='#'>
+										<img alt='Top Earning Genres' src='https://public.tableau.com/static/images/To/Top10HighestGrossingMovieGenres/TopEarningGenres/1_rss.png' style='border: none' />
+									</a>
+								</noscript>
+								<object class='tableauViz' style='width:100%; height:100%;'>
+									<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+									<param name='embed_code_version' value='3' />
+									<param name='site_root' value='' />
+									<param name='name' value='Top10HighestGrossingMovieGenres/TopEarningGenres' />
+									<param name='tabs' value='no' />
+									<param name='toolbar' value='yes' />
+								</object>
+							</div>
 						</div>
 					</section>
 					<section class="wrapper style1 align-center">
@@ -116,7 +130,21 @@
 							<p>Ultimately, this trend underscores that beyond genre or story, audience loyalty to familiar faces — and the on-screen chemistry between co-stars — is a compelling factor behind repeated success at the box office.</p>
 						</div>	
 						<div class="image" id="viz1-container">
-							<div class='tableauPlaceholder' id='viz1744430590933' style='position: relative'><noscript><a href='#'><img alt='Star Power producing more number of Box Office Hits ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book1_17443024587410&#47;Sheet4&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Book1_17443024587410&#47;Sheet4' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bo&#47;Book1_17443024587410&#47;Sheet4&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744430590933');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+							<div class='tableauPlaceholder' id='viz1' style="width:100%; height:100%;">
+								<noscript>
+									<a href='#'>
+										<img alt='Star Power producing more number of Box Office Hits' src='https://public.tableau.com/static/images/Bo/Book1_17443024587410/Sheet4/1_rss.png' style='border: none' />
+									</a>
+								</noscript>
+								<object class='tableauViz' style='width:100%; height:100%;'>
+									<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+									<param name='embed_code_version' value='3' />
+									<param name='site_root' value='' />
+									<param name='name' value='Book1_17443024587410/Sheet4' />
+									<param name='tabs' value='no' />
+									<param name='toolbar' value='yes' />
+								</object>
+							</div>
 						</div>
 				</section>
 
@@ -139,7 +167,21 @@
 						<p>Now let's compare the gross revenue of box office hits and non-hits across a broad range of production companies using a stacked bar chart. Walt Disney Pictures stands out as the clear leader as it generated nearly $700 million in total gross revenue with a decent chunk coming from non-box office hits. This suggests that even Disney's non-hits perform well commercially, reinforcing its brand strength and market dominance. In addition, we can see that besides Disney, the other major production companies have similar ratios between their revenues of the type of movie and overall revenue. </p>
 					</div>
 					<div class="image" id="viz1-container">
-						<div class='tableauPlaceholder' id='viz1744320790037' style='position: relative'><noscript><a href='#'><img alt='Dashboard 2 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;RevenueComparison_17442321549290&#47;Dashboard2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='RevenueComparison_17442321549290&#47;Dashboard2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Re&#47;RevenueComparison_17442321549290&#47;Dashboard2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744320790037');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>					
+						<div class='tableauPlaceholder' id='viz1' style="width:100%; height:100%;">
+							<noscript>
+								<a href='#'>
+									<img alt='Dashboard 2' src='https://public.tableau.com/static/images/Re/RevenueComparison_17442321549290/Dashboard2/1_rss.png' style='border: none' />
+								</a>
+							</noscript>
+							<object class='tableauViz' style='width:100%; height:100%;'>
+								<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+								<param name='embed_code_version' value='3' />
+								<param name='site_root' value='' />
+								<param name='name' value='RevenueComparison_17442321549290/Dashboard2' />
+								<param name='tabs' value='no' />
+								<param name='toolbar' value='yes' />
+							</object>
+						</div>
 					</div>
 				</section>
 
@@ -154,7 +196,21 @@
 						<p> Focusing on Blumhouse, the type of movies they produce lean towards a singular genre being horror. This can suggest that genre specialization in the film industry is a strategic move for a production company. It allows the company to build a strong, recognizable brand and having a dedicated fan base for its niche. By focusing on what they do best and enjoy producing, Blumhouse has created a strong reputation in the horror film industry and allows them to have a serious competitive edge.</p>
 					</div>
 					<div class="image" id="viz1-container">
-						<div class='tableauPlaceholder' id='viz1744572755981' style='position: relative'><noscript><a href='#'><img alt='Dashboard 2 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bl&#47;BlumhouseGenres&#47;Dashboard2&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='BlumhouseGenres&#47;Dashboard2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Bl&#47;BlumhouseGenres&#47;Dashboard2&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744572755981');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>					</div>
+						<div class='tableauPlaceholder' id='viz2' style="width:100%; height:100%;">
+							<noscript>
+								<a href='#'>
+									<img alt='Dashboard 2' src='https://public.tableau.com/static/images/Bl/BlumhouseGenres/Dashboard2/1_rss.png' style='border: none' />
+								</a>
+							</noscript>
+							<object class='tableauViz' style='width:100%; height:100%;'>
+								<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+								<param name='embed_code_version' value='3' />
+								<param name='site_root' value='' />
+								<param name='name' value='BlumhouseGenres/Dashboard2' />
+								<param name='tabs' value='no' />
+								<param name='toolbar' value='yes' />
+							</object>
+						</div>
 				</section>
 			</div>
 
