--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<p>What does it take for a movie to be considered a box office hit? By comparing the production budgets of films to their worldwide gross, we explore the financial dynamics behind filmmaking. The 3x budget line (benchmark for a box office hit) helps us ask deeper questions: which kinds of films tend to soar past this line, and which ones fall short? Beyond just dollars, these trends hint at what audiences are willing to pay for—and what risks studios are willing to take.</p>
 						</div>
 						<div class="image" id="viz2-container">
-							<div class='tableauPlaceholder' id='viz1' style="width:100%; height:100%;">
+<!-- 							<div class='tableauPlaceholder' id='viz1' style="width:100%; height:100%;">
 								<noscript>
 									<a href='#'>
 										<img alt='Budget vs Revenue' src='https://public.tableau.com/static/images/Bu/BudgetvsRevenue_17431980401120/Sheet6/1_rss.png' style='border: none' />
@@ -57,7 +57,22 @@
 									<param name='tabs' value='no' />
 									<param name='toolbar' value='yes' />
 								</object>
-							</div>
+							</div> -->
+							<div class='tableauPlaceholder' id='viz1744674013893' style="width:100%; height:100%;">
+								<noscript>
+									<a href='#'>
+										<img alt='Budget vs Revenue ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;da&#47;data_vis_project_17446730485240&#47;BudgetVsRevenue&#47;1_rss.png' style='border: none' />
+									</a>
+								</noscript>
+								<object class='tableauViz'  style='width:100%; height:100%;'>
+									<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+									<param name='embed_code_version' value='3' /> 
+									<param name='site_root' value='' />
+									<param name='name' value='data_vis_project_17446730485240&#47;BudgetVsRevenue' />
+									<param name='tabs' value='no' />
+									<param name='toolbar' value='yes' />
+								</object>
+							</div>                  
 						</div>
 					</section>
 
@@ -83,8 +98,7 @@
 									<param name='toolbar' value='yes' />
 								</object>
 							</div>
-						</div>
-					</section>
+						</div>            
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h3>Genres of Top 10 movies</h3>
