--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 									<param name='toolbar' value='yes' />
 								</object>
 							</div>
-						</div>            
+						</div>
+					</section>
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h3>Genres of Top 10 movies</h3>
