--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				<section class="banner style1 orient-left image-position-right fullscreen onload-image-fade-in onload-content-fade-left tableauPlaceholder">
 					<div class="content">
 						<h2>The Hitmakers</h2>
-						<p>Now let's compare the gross revenue of box office hits and non-hits across a broad range of production companies using a stacked bar chart. Walt Disney Pictures stands out as the clear leader as it generated nearly $700 million in total gross revenue with a decent chunk coming from non-box office hits. This suggests that even Disney's non-hits perform well commercially, reinforcing its brand strength and market dominance. In addition, we can see that besides Disney, the other major production companies have similar ratios between their revenues of the type of movie and overall revenue. </p>
+						<p>Now let's compare the gross revenue of box office hits and non-hits across a broad range of production companies using a stacked bar chart. Bigger production companies produce more movies and therefore have higher revenue but also have more non-hit movies compared to some smaller companies that have a higher hit to non-hit ratio. Therefore, bigger companies are optimized for scale whereas smaller ones are optimized for precision.  </p>
 					</div>
 					<div class="image" id="viz1-container">
 						<div class='tableauPlaceholder' id='viz1' style="width:100%; height:100%;">
